--- a/index.html
+++ b/index.html
@@ -19,15 +19,11 @@
       <div class="container headerStyle">
         <div class="row">
           <div class="col">
-            <div class="row">
-              <div class="col-2 col-sm-2 col-md-1 textAlignEnd">
-                <button class="textAlignEnd">
-                  <i class="fas fa-arrow-left"></i>
-                </button>
-              </div>
-              <div class="col-9 col-sm-10 col-md-11">
-                <p>ADD NEW AGENT</p>
-              </div>
+            <div class="row center-align">
+              <a href="#">
+                <img src="assets/img/icon/ic/ic_arrow_back_app_bar.png" alt="" class="header-icon">
+              </a>
+              ADD NEW AGENT
             </div>
           </div>
         </div>
@@ -38,20 +34,11 @@
       <!-- form  -->
       <div class="container form-main-grid main-grid">
         <div class="row">
-
-          <!-- login form header -->
-          <div class="container">
-            <div class="row">
-
-              <div class="col-1 col-sm-1 col-md-1">
-                <i class="fas fa-search header-icon"></i>
-              </div>
-              <div class="col-10 col-sm-11 col-md-11 header-text">
-                <p>ENTER THE PARAMETERS OF SEARCH</p>
-              </div>
-            </div>
-
+          <div class="col-12 col-sm-12 col-md-12 header-text">
+            <img src="assets/img/icon/ic/search_40px.png" alt=""  class="icon-margin small-image">
+            ENTER THE PARAMETERS OF SEARCH
           </div>
+
           <!-- login form header -->
 
           <div class="container">
@@ -73,15 +60,15 @@
                     <!--form first column  -->
                     <div class="col-sm-12 col-md-12 col-lg-6">
                       <div class="form-row">
-                        <div class="col-sm-11 col-md-9 col-lg-11 input_divider">
+                        <div class="col-sm-12 col-md-12 col-lg-12 input_divider">
                           <label for="">Enter primary job title</label>
                           <input type="text" class="form-control form-control-sm borderinput" placeholder="e.g. Telesale">
                         </div>
-                        <div class="col-sm-11 col-md-9 col-lg-11 input_divider">
+                        <div class="col-sm-12 col-md-12 col-lg-12 input_divider">
                           <label for="">Enter sector experience</label>
                           <input type="text" class="form-control form-control-sm borderinput" placeholder="PARAMETERS OF SEARCH">
                         </div>
-                        <div class="col-sm-11 col-md-9 col-lg-11 input_divider">
+                        <div class="col-sm-12 col-md-12 col-lg-12 input_divider">
                           <label for="">Enter technologies/ frameworks/software</label>
                           <input type="text" class="form-control form-control-sm borderinput" placeholder="you can enter several ">
                         </div>
@@ -92,7 +79,7 @@
                     <!-- form second column -->
                     <div class="col-sm-12 col-md-12 col-lg-6">
                       <div class="form-row">
-                        <div class="col-sm-11 col-md-9 col-lg-12 form-group input_divider">
+                        <div class="col-sm-12 col-md-12 col-lg-12 form-group input_divider">
                           <label for="inState" class="">Choose voice character (for sales-agents)</label>
                           <select id="inState" class="form-control form-control-MD">
                             <option selected value="">Voice chapter 1 type</option>
@@ -100,125 +87,159 @@
                           </select>
                         </div>
 
-                        <div class="col-sm-11 col-md-9 col-lg-12 input_divider">
+                        <div class="col-sm-12 col-md-12 col-lg-12 input_divider">
                           <label for="">Specify available hours per week</label>
                           <input type="text" class="form-control form-control-sm borderinput" placeholder="25">
                         </div>
 
-                        <div class="col-sm-11 col-md-9 col-lg-11 input_divider">
+                        <div class="col-sm-12 col-md-12 col-lg-12 ">
                           <div class="row form-control-sm">
 
-                            <div class="col-sm-12 col-md-6">
-                              <div class="col-sm-12 form-control-sm">
+                            <div class="col-12 col-sm-12 col-md-6">
+                              <div class="col-sm-12 form-control-sm input_divider">
                                 <label for="" >Choose languages</label>
                                 <div class="row">
-                                  <div class="col-sm-6">
+                                  <div class="col-1 radio-grid">
+                                  <div class="radio-button">
                                     <input type="radio" name="language" class="sr-only" id="english">
                                     <label for="english">
-                                      <img src="assets/img/englishselected.jpg" alt="english" width="40px" height="40px">
+                                      <img src="assets/img/icon/language/english_icon.png" alt="english">
                                     </label>
-                                    <label for="english">english</label>
+                                    <div class="">
+                                      <label for="english">english</label>
+                                    </div>
                                   </div>
+                                  <!-- </div> -->
 
-                                  <div class="col-sm-6">
+                                  <!-- english flag icon -->
+
+                                  <!-- <div class="col-1" style="padding-right: 0; padding-left: 0;"> -->
+                                  <div class="">
                                     <input type="radio" name="language" class="sr-only" id="spanish">
                                     <label for="spanish">
-                                      <img src="assets/img/spanishselected.jpg" alt="spanish" width="40px" height="40px">
+                                      <img src="assets/img/icon/language/spanish_icon.png" alt="english">
                                     </label>
-                                    <label for="spanish">spanish</label>
+                                    <div class="">
+                                      <label for="spanish">spanish</label>
+                                    </div>
                                   </div>
+
                                 </div>
 
-                              </div>
-                            </div>
+                                <!-- spanish flag icon -->
 
-                            <div class="col-sm-12 col-md-6">
-                              <div class="col-sm-12 form-control-sm">
-                                <label for="">Choose gender</label>
-                                <div class="row">
-                                  <div class="col-sm-4">
+                                <!-- </div> -->
+                              </div>
+
+                            </div>
+                          </div>
+
+                          <div class="col-sm-12 col-md-6">
+                            <div class="col-sm-12 form-control-sm input_divider">
+                              <label for="">Choose gender</label>
+                              <div class="row">
+
+                                <!-- male icon -->
+                                <div class="col-1 radio-grid">
+                                  <div class="radio-button">
                                     <input type="radio" name="gender" class="sr-only" id="male">
                                     <label for="male">
-                                      <img src="assets/img/maleselected.jpg" alt="male" width="40px" height="40px">
+                                      <img src="assets/img/icon/gender/male_icon.png" alt="male">
                                     </label>
-                                    <label for="male" class="icon-lable">male</label>
+                                    <div class="">
+                                      <label for="male" class="icon-lable">male</label>
+                                    </div>
                                   </div>
-
-                                  <div class="col-sm-4">
-                                    <input type="radio" name="gender" class="sr-only" id="female">
-                                    <label for="female">
-                                      <img src="assets/img/femaleselected.jpg" alt="female" width="40px" height="40px">
-                                    </label>
+                                <!-- </div> -->
+                                <div class="radio-button">
+                                  <input type="radio" name="gender" class="sr-only" id="female">
+                                  <label for="female">
+                                    <img src="assets/img/icon/gender/female_icon.png" alt="female">
+                                  </label>
+                                  <div class="">
                                     <label for="female" class="icon-lable">female</label>
                                   </div>
+                                </div>
+                                <!-- english flag icon -->
 
-                                  <div class="col-sm-4">
-                                    <input type="radio" name="gender" class="sr-only" id="both">
-                                    <label for="both">
-                                      <img src="assets/img/bothselected.jpg" alt="both" width="40px" height="40px">
-                                    </label>
+                                <!-- <div class="col-1" style="padding-right: 0; padding-left: 0;"> -->
+                                <div class="">
+                                  <input type="radio" name="gender" class="sr-only" id="both">
+                                  <label for="both">
+                                    <img src="assets/img/icon/gender/both_gender_icon.png" alt="both">
+                                  </label>
+                                  <div class="">
                                     <label for="both" class="icon-lable">both</label>
                                   </div>
                                 </div>
-                              </div>
-                            </div>
-
-                          </div>
-                        </div>
-
-                      </div>
-                    </div>
-                    <!-- end form second column  -->
-
-                    <div class="container">
-                      <div class="row">
-                        <div class="col-sm-12">
-                          <hr/>
-                        </div>
-                      </div>
-                    </div>
 
 
-                    <!-- form btns -->
-                    <div class="col-sm-12">
-                      <div class="form-row">
+                                <!-- female icon -->
 
-                        <div class="container">
-                          <div class="row">
-                            <div class="col-12 col-sm-6 col-md-8 right-side">
-                              <button type="button" class="btn btn-left">VIEW SAVED SEARCH</button>
-                            </div>
-                            <div class="col-12 col-sm-6 col-md-4">
-                              <div class="row">
-                                <div class="col-12 center-align">
-                                  <button type="button" class="btn btn-right-top">SEARCH FOR AGENTES</button>
-                                </div>
-                                <div class="col-12 center-align">
-                                  <button type="button" class="btn btn-right-bottom">SAVE THIS SEARCH</button>
-                                </div>
+
+                                <!-- both icon -->
+
+
                               </div>
                             </div>
                           </div>
+
                         </div>
                       </div>
                     </div>
-                    <!-- end from btns -->
-
-
 
                   </div>
-                </form>
+                  </div>
+                  <!-- end form second column  -->
 
-              </div>
+                  <div class="container">
+                    <div class="row">
+                      <div class="col-sm-12">
+                        <hr/>
+                      </div>
+                    </div>
+                  </div>
+
+
+                  <!-- form btns -->
+                  <div class="col-sm-12">
+                    <div class="form-row">
+                      <div class="container">
+                        <div class="row">
+                          <div class="col-12 col-sm-6 col-md-8 right-side">
+                            <button type="button" class="btn btn-left">VIEW SAVED SEARCH</button>
+                          </div>
+                          <div class="col-12 col-sm-6 col-md-4">
+                            <div class="row">
+                              <div class="col-12 center-content">
+                                <button type="button" class="btn btn-right-top">SEARCH FOR AGENTES</button>
+                              </div>
+                              <div class="col-12 center-content">
+                                <button type="button" class="btn btn-right-bottom">SAVE THIS SEARCH</button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- end from btns -->
+
+
+
+                </div>
+              </form>
+
             </div>
           </div>
-          <!-- login form -->
-
-
         </div>
+        <!-- login form -->
+
+
       </div>
-
-
-
     </div>
+
+
+
   </div>
+</div>
