[remove]clean my code

--- a/index.html
+++ b/index.html
@@ -100,146 +100,135 @@
                                 <label for="" >Choose languages</label>
                                 <div class="row">
                                   <div class="col-1 radio-grid">
-                                  <div class="radio-button">
-                                    <input type="radio" name="language" class="sr-only" id="english">
-                                    <label for="english">
-                                      <img src="assets/img/icon/language/english_icon.png" alt="english">
-                                    </label>
-                                    <div class="">
-                                      <label for="english">english</label>
-                                    </div>
-                                  </div>
-                                  <!-- </div> -->
 
-                                  <!-- english flag icon -->
-
-                                  <!-- <div class="col-1" style="padding-right: 0; padding-left: 0;"> -->
-                                  <div class="">
-                                    <input type="radio" name="language" class="sr-only" id="spanish">
-                                    <label for="spanish">
-                                      <img src="assets/img/icon/language/spanish_icon.png" alt="english">
-                                    </label>
-                                    <div class="">
-                                      <label for="spanish">spanish</label>
+                                    <!-- english flag icon -->
+                                    <div class="radio-button">
+                                      <input type="radio" name="language" class="sr-only" id="english">
+                                      <label for="english">
+                                        <img src="assets/img/icon/language/english_icon.png" alt="english">
+                                      </label>
+                                      <div class="">
+                                        <label for="english">english</label>
+                                      </div>
                                     </div>
+
+                                    <!-- spanish flag -->
+                                    <div class="">
+                                      <input type="radio" name="language" class="sr-only" id="spanish">
+                                      <label for="spanish">
+                                        <img src="assets/img/icon/language/spanish_icon.png" alt="english">
+                                      </label>
+                                      <div class="">
+                                        <label for="spanish">spanish</label>
+                                      </div>
+                                    </div>
+
                                   </div>
 
                                 </div>
 
-                                <!-- spanish flag icon -->
+                              </div>
+                            </div>
 
-                                <!-- </div> -->
+                            <div class="col-sm-12 col-md-6">
+                              <div class="col-sm-12 form-control-sm input_divider">
+                                <label for="">Choose gender</label>
+                                <div class="row">
+
+                                  <!-- male icon -->
+                                  <div class="col-1 radio-grid">
+                                    <div class="radio-button">
+                                      <input type="radio" name="gender" class="sr-only" id="male">
+                                      <label for="male">
+                                        <img src="assets/img/icon/gender/male_icon.png" alt="male">
+                                      </label>
+                                      <div class="">
+                                        <label for="male" class="icon-lable">male</label>
+                                      </div>
+                                    </div>
+
+                                    <!-- female icon -->
+                                    <div class="radio-button">
+                                      <input type="radio" name="gender" class="sr-only" id="female">
+                                      <label for="female">
+                                        <img src="assets/img/icon/gender/female_icon.png" alt="female">
+                                      </label>
+                                      <div class="">
+                                        <label for="female" class="icon-lable">female</label>
+                                      </div>
+                                    </div>
+
+                                    <!-- both icon -->
+                                    <div class="">
+                                      <input type="radio" name="gender" class="sr-only" id="both">
+                                      <label for="both">
+                                        <img src="assets/img/icon/gender/both_gender_icon.png" alt="both">
+                                      </label>
+                                      <div class="">
+                                        <label for="both" class="icon-lable">both</label>
+                                      </div>
+                                    </div>
+
+                                  </div>
+                                </div>
                               </div>
 
                             </div>
                           </div>
+                        </div>
 
-                          <div class="col-sm-12 col-md-6">
-                            <div class="col-sm-12 form-control-sm input_divider">
-                              <label for="">Choose gender</label>
+                      </div>
+                    </div>
+                    <!-- end form second column  -->
+
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-sm-12">
+                          <hr/>
+                        </div>
+                      </div>
+                    </div>
+
+
+                    <!-- form btns -->
+                    <div class="col-sm-12">
+                      <div class="form-row">
+                        <div class="container">
+                          <div class="row">
+                            <div class="col-12 col-sm-6 col-md-8 right-side">
+                              <button type="button" class="btn btn-left">VIEW SAVED SEARCH</button>
+                            </div>
+                            <div class="col-12 col-sm-6 col-md-4">
                               <div class="row">
-
-                                <!-- male icon -->
-                                <div class="col-1 radio-grid">
-                                  <div class="radio-button">
-                                    <input type="radio" name="gender" class="sr-only" id="male">
-                                    <label for="male">
-                                      <img src="assets/img/icon/gender/male_icon.png" alt="male">
-                                    </label>
-                                    <div class="">
-                                      <label for="male" class="icon-lable">male</label>
-                                    </div>
-                                  </div>
-                                <!-- </div> -->
-                                <div class="radio-button">
-                                  <input type="radio" name="gender" class="sr-only" id="female">
-                                  <label for="female">
-                                    <img src="assets/img/icon/gender/female_icon.png" alt="female">
-                                  </label>
-                                  <div class="">
-                                    <label for="female" class="icon-lable">female</label>
-                                  </div>
+                                <div class="col-12 center-content">
+                                  <button type="button" class="btn btn-right-top">SEARCH FOR AGENTES</button>
                                 </div>
-                                <!-- english flag icon -->
-
-                                <!-- <div class="col-1" style="padding-right: 0; padding-left: 0;"> -->
-                                <div class="">
-                                  <input type="radio" name="gender" class="sr-only" id="both">
-                                  <label for="both">
-                                    <img src="assets/img/icon/gender/both_gender_icon.png" alt="both">
-                                  </label>
-                                  <div class="">
-                                    <label for="both" class="icon-lable">both</label>
-                                  </div>
+                                <div class="col-12 center-content">
+                                  <button type="button" class="btn btn-right-bottom">SAVE THIS SEARCH</button>
                                 </div>
-
-
-                                <!-- female icon -->
-
-
-                                <!-- both icon -->
-
-
-                              </div>
-                            </div>
-                          </div>
-
-                        </div>
-                      </div>
-                    </div>
-
-                  </div>
-                  </div>
-                  <!-- end form second column  -->
-
-                  <div class="container">
-                    <div class="row">
-                      <div class="col-sm-12">
-                        <hr/>
-                      </div>
-                    </div>
-                  </div>
-
-
-                  <!-- form btns -->
-                  <div class="col-sm-12">
-                    <div class="form-row">
-                      <div class="container">
-                        <div class="row">
-                          <div class="col-12 col-sm-6 col-md-8 right-side">
-                            <button type="button" class="btn btn-left">VIEW SAVED SEARCH</button>
-                          </div>
-                          <div class="col-12 col-sm-6 col-md-4">
-                            <div class="row">
-                              <div class="col-12 center-content">
-                                <button type="button" class="btn btn-right-top">SEARCH FOR AGENTES</button>
-                              </div>
-                              <div class="col-12 center-content">
-                                <button type="button" class="btn btn-right-bottom">SAVE THIS SEARCH</button>
                               </div>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
+                    <!-- end from btns -->
+
+
+
                   </div>
-                  <!-- end from btns -->
+                </form>
 
-
-
-                </div>
-              </form>
-
+              </div>
             </div>
           </div>
+          <!-- login form -->
+
+
         </div>
-        <!-- login form -->
-
-
       </div>
+
+
+
     </div>
-
-
-
   </div>
-</div>
